--- a/assignment5-solution-starter/index.html
+++ b/assignment5-solution-starter/index.html
@@ -109,7 +109,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>-->
   <script src="js/jquery-2.1.4.min.js"></script> 
-  <script src="bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/ajax-utils.js"></script>
   <script src="js/script.js"></script>
 </body>
